<resources>
    <string name="app_name">Student UEK</string>
    <string name="next_step">Next step</string>
    <string name="choose_your_group_s">Choose your group(s)</string>
    <string name="error_try_again_later">An error has occurred. Try again later.</string>
    <string name="retry">Retry</string>
    <string name="choose_your_language_group_s">Choose your language group(s)</string>
    <string name="cancel">Cancel</string>
    <string name="start_hour">Start hour</string>
    <string name="end_hour">End hour</string>
    <string name="weekly_p_e">Weekly P.E.</string>
    <string name="p_e_start">P.E. Start</string>
    <string name="p_e_end">P.E. End</string>
    <string name="name">Name</string>
    <string name="pe_name_field_error">Name field must not be empty</string>
    <string name="hour_error">Start hour must be earlier than end hour</string>
    <string name="settings">Settings</string>
    <string name="notes">Notes</string>
    <string name="schedule">Schedule</string>
    <string name="search">Search</string>
    <string name="an_error_has_occurred_when_loading_schedule_please_try_again_later">An error has occurred when loading schedule, please try again later</string>
    <string name="add_new_schedule_item">Add new schedule item</string>
    <string name="add_lesson">Add lesson</string>
    <string name="save">Save</string>
    <string name="type">Type</string>
    <string name="teacher">Teacher</string>
    <string name="classroom">Classroom</string>
    <string name="date">Date</string>
    <string name="custom_lesson_name_error">Custom lesson name must not be empty</string>
    <string name="PREFS_REFRESH_SCHEDULE" translatable="false">pl.c0.sayard.studentUEK.PREFS_REFRESH_SCHEDULE</string>
    <string name="schedule_refreshed">Schedule refreshed</string>
    <string name="groups_and_teachers_refreshed">Groups and teachers refreshed</string>
    <string name="teacher_page">Teacher page</string>
    <string name="add_new_note">Add new note</string>
    <string name="you_don_t_have_any_notes">You don\'t have any notes</string>
    <string name="new_note">New note</string>
    <string name="save_note">Save note</string>
    <string name="title">Title</string>
    <string name="content">Content</string>
    <string name="note_date">Note Date</string>
    <string name="note_hour">Note Hour</string>
    <string name="note_delete_message">Do you want to delete this note?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="note_delete_error">There was an error deleting note</string>
    <string name="note_id_extra" translatable="false">EXTRA_NOTE_ID</string>
    <string name="subject_extra" translatable="false">EXTRA_SUBJECT</string>
    <string name="type_extra" translatable="false">EXTRA_TYPE</string>
    <string name="teacher_extra" translatable="false">EXTRA_TEACHER</string>
    <string name="teacher_id_extra" translatable="false">EXTRA_TEACHER_ID</string>
    <string name="classroom_extra" translatable="false">EXTRA_CLASSROOM</string>
    <string name="comments_extra" translatable="false">EXTRA_COMMENTS</string>
    <string name="start_date_extra" translatable="false">EXTRA_START_DATE</string>
    <string name="end_date_extra" translatable="false">EXTRA_END_DATE</string>
    <string name="is_custom_extra" translatable="false">EXTRA_IS_CUSTOM</string>
    <string name="date_extra" translatable="false">EXTRA_DATE</string>
    <string name="custom_id_extra" translatable="false">EXTRA_CUSTOM_ID</string>
    <string name="building">Building</string>
    <string name="edit">Edit</string>
    <string name="extra_custom_lesson_name" translatable="false">EXTRA_CUSTOM_LESSON_NAME</string>
    <string name="extra_custom_lesson_type" translatable="false">EXTRA_CUSTOM_LESSON_TYPE</string>
    <string name="extra_custom_lesson_teacher" translatable="false">EXTRA_CUSTOM_LESSON_TEACHER</string>
    <string name="extra_custom_lesson_building" translatable="false">EXTRA_CUSTOM_LESSON_BUILDING</string>
    <string name="extra_custom_lesson_classroom" translatable="false">EXTRA_CUSTOM_LESSON_CLASSROOM</string>
    <string name="extra_custom_lesson_date" translatable="false">EXTRA_CUSTOM_LESSON_DATE</string>
    <string name="extra_custom_lesson_start_hour" translatable="false">EXTRA_CUSTOM_LESSON_START_HOUR</string>
    <string name="extra_custom_lesson_end_hour" translatable="false">EXTRA_CUSTOM_LESSON_END_HOUR</string>
    <string name="extra_custom_id" translatable="false">EXTRA_CUSTOM_ID</string>
    <string name="delete">Delete</string>
    <string name="custom_lesson_delete_message">Do you want to delete this lesson?</string>
    <string name="custom_lesson_delete_error">There was an error deleting lesson</string>
    <string name="extra_note_id" translatable="false">EXTRA_NOTE_ID</string>
    <string name="extra_note_content" translatable="false">EXTRA_NOTE_CONTENT</string>
    <string name="add_note">Add note</string>
    <string name="edit_note">Edit note</string>
    <string name="note_update_error">There was an error updating note</string>
    <string name="note_adding_error">There was an error adding a note</string>
    <string name="schedule_details_marker_snippet">Click here to open Google Maps</string>
    <string name="google_calendar_integration">Google Calendar Integration</string>
    <string name="your_schedule_will_automatically_get_added_to_your_google_calendar">Your schedule will automatically get added to your Google Calendar</string>
    <string name="no_network_connection_message">No network connection is available. Try again later.</string>
    <string name="contacts_permission_rationale">This app requires contacts permissions to access your Google Account.</string>
    <string name="gp_services_required_msg">This app requires Google Play Services</string>
    <string name="PREFS_ACCOUNT_NAME" translatable="false">accountName</string>
    <string name="PREFS_ENABLE_GC" translatable="false">pl.c0.sayard.studentUEK.PREFS_ENABLE_GC</string>
    <string name="GC_ERROR_CHANNEL" translatable="false">pl.c0.sayard.studentUEK.GC_ERROR_CHANNEL</string>
    <string name="gc_items_adding_fail">Failed to add items to your Google Calendar</string>
    <string name="click_here_to_try_again">Click here to try again</string>
    <string name="notifications">Notifications</string>
    <string name="notifications_will_display_before_every_item_in_your_schedule">You will receive notifications for every item in your schedule</string>
    <string name="minutes">Minutes:</string>
    <string name="PREFS_ENABLE_NOTIFICATIONS" translatable="false">pl.c0.sayard.studentUEK.PREFS_ENABLE_NOTIFICATIONS</string>
    <string name="PREFS_NOTIFICATION_TIME_THRESHOLD" translatable="false">pl.c0.sayard.studentUEK.PREFS_NOTIFICATION_TIME_THRESHOLD</string>
    <string name="EXTRA_NOTIFICATION_SUBJECT" translatable="false">pl.c0.sayard.studentUEK.EXTRA_NOTIFICATION_SUBJECT</string>
    <string name="EXTRA_NOTIFICATION_CLASSROOM" translatable="false">pl.c0.sayard.studentUEK.EXTRA_NOTIFICATION_CLASSROOM</string>
    <string name="EXTRA_NOTIFICATION_HOUR" translatable="false">pl.c0.sayard.studentUEK.EXTRA_NOTIFICATION_HOUR</string>
    <string name="SCHEDULE_ITEM_NOTIFICATION_CHANNEL" translatable="false">pl.c0.sayard.studentUEK.SCHEDULE_ITEM_NOTIFICATION_CHANNEL</string>
    <string name="PIGEON_NOTIFICATION_CHANNEL" translatable="false">pl.c0.sayard.studentUEK.PIGEON_NOTIFICATION_CHANNEL</string>
    <string name="reconfiguring">Reconfiguring</string>
    <string name="choose_your_groups_one_more_time">Choose your groups one more time</string>
    <string name="groups_rechoosing_dialog_msg">Are you sure yo want to choose your groups one more time?</string>
    <string name="credits">Credits</string>
    <string name="buy_activate_premium">Buy/Activate Premium</string>
    <string name="get_rid_of_the_ads_and_gain_extra_features_by_buying_premium">Get rid of the ads and gain extra features by buying premium</string>
    <string name="EXTRA_SEARCHED_SCHEDULE_GROUP_ID" translatable="false">pl.c0.sayard.studentUEK.EXTRA_SEARCHED_SCHEDULE_GROUP_ID</string>
    <string name="EXTRA_SEARCHED_SCHEDULE_GROUP_NAME" translatable="false">pl.c0.sayard.studentUEK.EXTRA_SEARCHED_SCHEDULE_GROUP_NAME</string>
    <string name="EXTRA_SEARCHED_SCHEDULE_GROUP_TYPE" translatable="false">pl.c0.sayard.studentUEK.EXTRA_SEARCHED_SCHEDULE_GROUP_TYPE</string>
    <string name="no_internet_conn">You have no internet connection</string>
    <string name="current_theme">Current theme: </string>
    <string name="change_theme">Change Theme</string>
    <string name="defaultTheme">Default</string>
    <string name="darkTheme">Dark</string>
    <string name="premiumTheme">Premium</string>
    <string name="choose_a_theme">Choose a theme</string>
    <string name="apply">Apply</string>
    <string name="PREFS_SELECTED_THEME" translatable="false">pl.c0.sayard.studentUEK.PREFS_SELECTED_THEME</string>
    <string name="EXTRA_NOTIFICATION_TYPE" translatable="false">pl.c0.sayard.studentUEK.EXTRA_NOTIFICATION_TYPE</string>
    <string name="EXTRA_NOTIFICATION_TEACHER" translatable="false">pl.c0.sayard.studentUEK.EXTRA_NOTIFICATION_TEACHER</string>
    <string name="EXTRA_NOTIFICATION_TEACHER_ID" translatable="false">pl.c0.sayard.studentUEK.EXTRA_NOTIFICATION_TEACHER_ID</string>
    <string name="EXTRA_NOTIFICATION_COMMENTS" translatable="false">pl.c0.sayard.studentUEK.EXTRA_NOTIFICATION_COMMENTS</string>
    <string name="EXTRA_NOTIFICATION_DATE" translatable="false">pl.c0.sayard.studentUEK.EXTRA_NOTIFICATION_DATE</string>
    <string name="EXTRA_NOTIFICATION_START_DATE" translatable="false">pl.c0.sayard.studentUEK.EXTRA_NOTIFICATION_START_DATE</string>
    <string name="EXTRA_NOTIFICATION_END_DATE" translatable="false">pl.c0.sayard.studentUEK.EXTRA_NOTIFICATION_END_DATE</string>
    <string name="EXTRA_NOTIFICATION_IS_CUSTOM" translatable="false">pl.c0.sayard.studentUEK.EXTRA_NOTIFICATION_IS_CUSTOM</string>
    <string name="EXTRA_NOTIFICATION_CUSTOM_ID" translatable="false">pl.c0.sayard.studentUEK.EXTRA_NOTIFICATION_CUSTOM_ID</string>
    <string name="EXTRA_NOTIFICATION_NOTE_ID" translatable="false">pl.c0.sayard.studentUEK.EXTRA_NOTIFICATION_NOTE_ID</string>
    <string name="EXTRA_NOTIFICATION_NOTE_CONTENT" translatable="false">pl.c0.sayard.studentUEK.EXTRA_NOTIFICATION_NOTE_CONTENT</string>
    <string name="PREFS_APP_NOT_RATED" translatable="false">pl.c0.sayard.StudentUEK.PREFS_APP_NOT_RATED</string>
    <string name="PREFS_APP_RATING_DIALOG_COUNTER" translatable="false">pl.c0.sayard.StudentUEK.PREFS_APP_RATING_DIALOG_COUNTER</string>
    <string name="do_you_like_this_app">Do you like this app?</string>
    <string name="app_rating_message">I\'m glad that you\'re using my app! Would you mind giving me a 5-star rating in Google Play? Thanks for your support :)</string>
    <string name="maybe_later">Maybe later</string>
    <string name="no_thanks">No thanks</string>
    <string name="sure_take_me_there">Sure, take me there</string>
    <string name="schedule_length">Schedule length</string>
    <string name="PREFS_PREMIUM_PURCHASED" translatable="false">pl.c0.sayard.StudentUEK.PREFS_PREMIUM_PURCHASED</string>
    <string name="billing_no_network_error">You don\'t have internet connection</string>
    <string name="billing_item_not_available_error">Requested item is not available right now</string>
    <string name="billing_item_already_owned_error">This item has already been purchased by you</string>
    <string name="courses">Courses</string>
    <string name="discourses">Discourses</string>
    <string name="exercises">Exercises</string>
    <string name="lectures">Lectures</string>
    <string name="no_events_at_this_date">No events at this date</string>
    <string name="could_not_load_events">Could not load events. Try again later.</string>
    <string name="clear_event_filters">Clear event filters</string>
</resources>