<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_moodle"
        android:icon="@drawable/ic_moodle_24dp"
        android:title="@string/courses"/>

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_search_24dp"
        android:title="@string/search" />

    <item
        android:id="@+id/navigation_schedule"
        android:icon="@drawable/ic_schedule_24dp"
        android:title="@string/schedule" />

    <item
        android:id="@+id/navigation_notes"
        android:icon="@drawable/ic_notes_24dp"
        android:title="@string/notes" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_settings_24dp"
        android:title="@string/settings"/>

</menu>
