<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="20dp"
    android:background="?attr/colorBackground">

    <CheckBox
        android:id="@+id/filter_discourses"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="?attr/colorTextPrimary"
        android:textSize="20sp"
        android:text="@string/discourses"/>

    <CheckBox
        android:id="@+id/filter_exercises"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="?attr/colorTextPrimary"
        android:textSize="20sp"
        android:text="@string/exercises"
        app:layout_constraintTop_toBottomOf="@id/filter_discourses"/>

    <CheckBox
        android:id="@+id/filter_lectures"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="?attr/colorTextPrimary"
        android:textSize="20sp"
        android:text="@string/lectures"
        app:layout_constraintTop_toBottomOf="@id/filter_exercises"/>

</android.support.constraint.ConstraintLayout>