<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="pl.c0.sayard.studentUEK.activities.AddLessonActivity"
    android:background="?attr/colorBackground">

    <EditText
        android:id="@+id/custom_lesson_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:textColorHint="?attr/colorTextSecondary"
        android:textSize="24sp"
        android:textColor="?attr/colorTextPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="5sp"
        android:inputType="textCapSentences"/>

    <EditText
        android:id="@+id/custom_lesson_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/type"
        android:textColorHint="?attr/colorTextSecondary"
        android:textSize="24sp"
        android:textColor="?attr/colorTextPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/custom_lesson_name"
        android:layout_marginTop="5dp"
        android:inputType="textCapSentences"/>

    <EditText
        android:id="@+id/custom_lesson_teacher"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/teacher"
        android:textColorHint="?attr/colorTextSecondary"
        android:textSize="24sp"
        android:textColor="?attr/colorTextPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/custom_lesson_type"
        android:layout_marginTop="5dp"
        android:inputType="textCapSentences"/>

    <Spinner
        android:id="@+id/custom_lesson_building"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/custom_lesson_teacher"/>

    <EditText
        android:id="@+id/custom_lesson_classroom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/classroom"
        android:textColorHint="?attr/colorTextSecondary"
        android:textSize="24sp"
        android:textColor="?attr/colorTextPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/custom_lesson_building"
        android:layout_marginTop="5dp"
        android:inputType="textCapSentences"/>

    <TextView
        android:id="@+id/custom_lesson_date_header_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:textSize="24sp"
        android:textColor="?attr/colorTextSecondary"
        app:layout_constraintTop_toBottomOf="@id/custom_lesson_classroom"/>

    <TextView
        android:id="@+id/custom_lesson_date_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="24sp"
        android:textColor="?attr/colorTextSecondary"
        app:layout_constraintTop_toBottomOf="@id/custom_lesson_date_header_tv"/>

    <LinearLayout
        android:id="@+id/custom_lesson_hour_headers"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/custom_lesson_date_tv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/custom_lesson_start_hour_header"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:gravity="center"
            android:textSize="18sp"
            android:text="@string/start_hour"
            android:textColor="?attr/colorTextSecondary"/>

        <TextView
            android:id="@+id/custom_lesson_end_hour_header"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:gravity="center"
            android:textSize="18sp"
            android:text="@string/end_hour"
            android:textColor="?attr/colorTextSecondary"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/pe_hours"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/custom_lesson_hour_headers"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/custom_lesson_start_hour_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:gravity="center"
            android:text="12:00"
            android:textSize="18sp"
            android:textColor="?attr/colorTextPrimary"/>

        <TextView
            android:id="@+id/custom_lesson_end_hour_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:gravity="center"
            android:text="13:30"
            android:textSize="18sp"
            android:textColor="?attr/colorTextPrimary"/>

    </LinearLayout>

    <Button
        android:id="@+id/save_custom_lesson_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginStart="0dp"
        android:background="?attr/colorPrimary"
        android:clickable="false"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/save"
        android:textColor="?attr/colorTextButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

</android.support.constraint.ConstraintLayout>
