<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="pl.c0.sayard.studentUEK.fragments.SearchFragment"
    android:background="?attr/colorBackground">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <CalendarView
            android:id="@+id/events_calendar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:id="@+id/events_filter_wrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp"
            android:visibility="gone">

            <TextView
                android:id="@+id/events_filter_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

            <ImageButton
                android:id="@+id/events_filter_clear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:src="@drawable/ic_cancel_primary_24dp"
                android:contentDescription="@string/clear_event_filters" />

        </LinearLayout>

        <ProgressBar
            android:id="@+id/events_progress_bar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/no_events_text_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/no_events_at_this_date"
            android:textAlignment="center"
            android:paddingTop="20dp"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/could_not_load_events_text_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/could_not_load_events"
            android:textAlignment="center"
            android:paddingTop="20dp"
            android:visibility="gone"/>

        <ListView
            android:id="@+id/events_list_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</FrameLayout>
