<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="pl.c0.sayard.studentUEK.activities.AddNoteActivity"
    android:background="?attr/colorBackground">

    <EditText
        android:id="@+id/note_title"
        android:inputType="textCapSentences"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="15dp"
        android:hint="@string/title"
        android:textColor="?attr/colorTextPrimary"
        android:textColorHint="?attr/colorTextSecondary"/>

    <EditText
        android:id="@+id/note_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textCapSentences|textMultiLine"
        android:lines="5"
        android:maxLines="5"
        android:hint="@string/content"
        android:textColor="?attr/colorTextPrimary"
        android:textColorHint="?attr/colorTextSecondary"
        android:gravity="top|start"
        app:layout_constraintTop_toBottomOf="@id/note_title"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/note_content"
        android:padding="5dp">

        <TextView
            android:id="@+id/note_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textColor="?attr/colorTextSecondary"/>

        <TextView
            android:id="@+id/note_hour"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:textSize="24sp"
            android:textColor="?attr/colorTextSecondary"/>

    </LinearLayout>

    <Button
        android:id="@+id/save_note_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginStart="0dp"
        android:background="?attr/colorPrimary"
        android:clickable="false"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/save_note"
        android:textColor="?attr/colorTextButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

</android.support.constraint.ConstraintLayout>
